--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,700,700i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700&display=swap');
+
+// External imports
+@import "styles/variables.scss";
+
+body {
+  font-family: 'SourceSansPro', sans-serif, Arial;
+  color: $primary-text;
+  margin: 0;
+  padding: 0;
+}
