--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,17 @@
-<div class="container">
-	<header>
+<header>
+	<div class="container">
 		<div class="header-logo">
-			<a href="#">Ahmet Ömer</a>
+			<!--<a href="#">Ahmet Ömer</a>-->
+			<a href="#">
+				<img style="width: 33px; margin-top: 5px;" src="../../../assets/favicon/android-chrome-192x192.png" alt="Icon">
+			</a>
 		</div>
 		<div class="header-nav">
-			<a href="#">Home</a>
-			<a href="#">Works</a>
-			<a href="#">Writings</a>
-			<a href="#">Contact</a>
-			<a href="#">CV</a>
+			<a href="/">Home</a>
+			<!--<a href="#">Works</a>-->
+			<!--<a href="#">Writings</a>-->
+			<!--<a href="#">Contact</a>-->
+			<a href="../../../assets/ahmetomer_developer_cv.pdf" target="_blank">CV</a>
 		</div>
-	</header>
-</div>
+	</div>
+</header>
