--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,1 +1,4 @@
-$primary-text: rgba(8, 8, 8, 0.96);
+$primary_dark_grey: rgba(8, 8, 8, 0.95);
+$secondary_grey: rgba(8, 8, 8, 0.65);
+$maastricht_blue: #031927;
+$primary_dim_grey: #FDFFFD;
