Changed build and asset paths for github pages deployment

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
 		<div class="header-logo">
 			<!--<a href="#">Ahmet Ömer</a>-->
 			<a href="#">
-				<img style="width: 33px; margin-top: 5px;" src="../../../assets/favicon/android-chrome-192x192.png" alt="Icon">
+				<img style="width: 33px; margin-top: 5px;" src="./assets/favicon/android-chrome-192x192.png" alt="Icon">
 			</a>
 		</div>
 		<div class="header-nav">
@@ -11,7 +11,7 @@
 			<!--<a href="#">Works</a>-->
 			<!--<a href="#">Writings</a>-->
 			<!--<a href="#">Contact</a>-->
-			<a href="../../../assets/ahmetomer_developer_cv.pdf" target="_blank">CV</a>
+			<a href="./assets/ahmetomer_developer_cv.pdf" target="_blank">CV</a>
 		</div>
 	</div>
 </header>
