--- a/src/app/components/project-item/project-item.component.scss
+++ b/src/app/components/project-item/project-item.component.scss
@@ -4,11 +4,11 @@
 	background: #fff;
 	padding: .5em;
 	width: 400px;
-	margin: .5em 0;
+	margin: .5em .5em .5em 0;
 	display: flex;
 	flex-direction: column;
-	box-shadow: 0 0 4px 2px rgba(0,0,0,0.03);
-	border: 1px solid rgba(0,0,0,0.03);
+	box-shadow: 0 0 4px 2px rgba(0,0,0,0.01);
+	border: 1px solid rgba(0,0,0,0.07);
 	.project-item-img-container {
 		flex: 1;
 		#project-item-art-canvas {
@@ -18,7 +18,6 @@
 	}
 	.project-item-content-container {
 		flex: 4;
-		padding-left: .4em;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
