Updated internet addresses links

--- a/src/app/components/internet-addresses/internet-addresses.component.html
+++ b/src/app/components/internet-addresses/internet-addresses.component.html
@@ -4,15 +4,18 @@
 		Email: <a class="main-link" href="mailto:ahmetomerv@gmail.com">ahmetomerv@gmail.com</a>
 	</li>
 	<li>
-		GitHub: <a class="main-link" href="https://github.com/ahmetomerv">https://github.com/ahmetomerv</a>
+		GitHub: <a class="main-link" href="https://github.com/ahmetomerv">github.com/ahmetomerv</a>
 	</li>
 	<li>
-		LinkedIn: <a class="main-link" href="https://linkedin.com/in/ahmetomer/">https://linkedin.com/in/ahmetomer</a>
+		LinkedIn: <a class="main-link" href="https://linkedin.com/in/ahmetomer/">linkedin.com/in/ahmetomer</a>
 	</li>
 	<li>
-		Dribbble: <a class="main-link" href="https://dribbble.com/ahmetomer">https://dribbble.com/ahmetomer</a>
+		Dribbble: <a class="main-link" href="https://dribbble.com/ahmetomer">dribbble.com/ahmetomer</a>
 	</li>
 	<li>
-		Twitter: <a class="main-link" href="https://twitter.com/ahmetomerv">https://twitter.com/ahmetomerv</a>
+		Twitter: <a class="main-link" href="https://twitter.com/ahmetomerv">twitter.com/ahmetomerv</a>
+	</li>
+	<li>
+		Instagram: <a class="main-link" href="https://instagram.com/ahmetomerv">instagram.com/ahmetomerv</a>
 	</li>
 </ul>
