Added fade in animation to project items

--- a/src/app/components/project-item/project-item.component.html
+++ b/src/app/components/project-item/project-item.component.html
@@ -1,5 +1,5 @@
 <a [href]="project.repoUrl" style="text-decoration: none; color: inherit;">
-	<div class="project-item-container">
+	<div class="project-item-container" [@fadeIn]="project">
 		<div class="project-item-img-container">
 			<canvas #projectItemArtCanvas id="project-item-art-canvas"></canvas>
 		</div>
