--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,2 +1,7 @@
 <h2 class="main-header">About me</h2>
-<p>My name is Ahmet Ömer, I work on software development. I live in the Anatolian side of İstanbul. I have worked remotely with multiple clients and as a full-time Frontend Developer, I've worked on software projects in Aksigorta, Omni Pos & Türk Telekom. On Regular basis, I work with JavaScript, Angular, TypeScript, Redux/NgRx, HTML, CSS/SASS and other libraries such as Bootstrap, lodash, Material UI, and more. I also use, although not extensively, and know my way around Node, Express, MongoDB, React, Java & Spring. I like to educate myself on technology, programming, data structures, algorithms and network. In my time outside of work, I spend much of my time reading books on classical era philosophy, existentialist and realist literature, and science-fiction. Watching and playing football, listening to The Smiths, Led Zeppelin & watching movies are my other little hobbies.</p>
+<p>I'm Ahmet Ömer, I live in the Anatolian side of İstanbul. As Frontend Developer, I've worked on software projects in Aksigorta
+   and Türk Telekom. On Regular basis, I work with JavaScript, Angular, TypeScript, Redux/NgRx, HTML, CSS/SASS and other libraries
+   such as Bootstrap, lodash, Material UI, and more. I also use, although not extensively, and know my way around Node, Express,
+   MongoDB, React, Java & Spring. I spend much of my time outside of work to reading books on classical and modern philosophy,
+   existentialist and realist literature, and science-fiction. Listening to music, learning new things in computer science,
+   watching shows & movies, collecting artworks and watching football games are few of my other hobbies.
