--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,8 @@
 <header>
 	<div class="container">
 		<div class="header-logo">
-			<!--<a href="#">Ahmet Ömer</a>-->
 			<a href="#">
-				<img style="width: 33px; margin-top: 5px;" src="./assets/favicon/android-chrome-192x192.png" alt="Icon">
+				<img style="width: 33px; margin-top: 5px;" src="./assets/icons/logo.svg" alt="Logo">
 			</a>
 		</div>
 		<div class="header-nav">
