link commented out

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
 			<!--<a href="#">Works</a>-->
 			<!--<a href="#">Writings</a>-->
 			<!--<a href="#">Contact</a>-->
-			<a href="./assets/CV_ahmetomer_04-2020.pdf" target="_blank">CV</a>
+			<!-- <a href="./assets/CV_ahmetomer_04-2020.pdf" target="_blank">CV</a> -->
 		</div>
 	</div>
 </header>
